app/assets/stylesheets/application.css
/*
* This is a manifest file that'll be compiled into application.css, which will include all the files
* listed below.
*
* Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
* vendor/assets/stylesheets directory can be referenced here using a relative path.
*
* You're free to add application-wide styles to this file and they'll appear at the bottom of the
* compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
* files in this directory. Styles in this file should be added after the last require_* statement.
* It is generally better to create a new file per style scope.
*
*= require_tree .
*= require_self
*/

/* universal styles */

html, body {
  margin: 0;
  padding: 0;
  width: 100%
}

body {
  font-family: Quicksand;
  color: white;
  background-image: url('brickWall.jpeg');
  background-attachment: fixed;
}

/*** PICTURE SHOW VIEW ***/

div.margin-top {
  margin-top: 1vh;
  margin-right: 1vw;
  margin-left: 1vw;
  margin-bottom: 1vh;
}

.review-block {
  background: rgba(0, 0, 0, 0.7);
  margin-right: 1vw;
  margin-left: 1vw;
}

section figure {
  float: left;
  clear: both;
  position: relative;
  overflow: auto;
  margin: 0 auto;
  padding: 30px 0 0 0;
  font-size: 15px;
}

section figure img {
  vertical-align: bottom;
}

section figure figcaption {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.7);
  text-align: center;
  color: #fff;
  padding: 10px;
}

